ajout question de recherche pour compléter la précédente

--- a/cahier laboratoire.Rmd
+++ b/cahier laboratoire.Rmd
@@ -38,7 +38,7 @@ Questions biologiques potentielles :
 Relations entre les conditions environnementales et la structure du benthos :
 
 Comment la composition taxonomique du benthos est-elle influencée par la largeur, la profondeur et la vitesse du courant de la rivière ?
-
+Est-ce que la période d'échantillonnage influence la diversité et la  densité de benthos ?
 
 
 
