Nombreux changements pour être en mesure de faire fonctionner le pipeline (on as tout supprimer ce qui avait hors des fonctions, finalement nous gardons tous les données du tableau et nous avons corriger quelques erreurs dans nos appelations pour le fonctions)
supprimer les scripts inutiles

ON SE RAPPROCHE DE LA FIN!

--- a/cahier laboratoire.Rmd
+++ b/cahier laboratoire.Rmd
@@ -5,7 +5,7 @@ author: "Jouen / Rompré / Gagnon"
 date: "3/28/2024"
 output: html_document
 ---
-
+pnas_type:pnasresearcharticle
 --------------------------------------------------------------------------
 
 TEXTE
