--- a/Rapport1/Rapport1.Rmd
+++ b/Rapport1/Rapport1.Rmd
@@ -12,43 +12,25 @@ author:
 address:
   - code: a
     address: Université de Sherbrooke, Department de Biologie, Bd de l'Université, Sherbrooke, Québec, J1K 2R1
-  
+
 corresponding_author:
   code: 2
   text: "To whom correspondence should be addressed. E-mail: alexis.rompre@usherbrooke.ca"
 
 # For footer text
-lead_author_surname: Anonymous
-
-## Remove this if not required    
-equal_authors:
-  code: 1
-  text: "A.O.(Author One) and A.T. (Author Two) contributed equally to this work (remove if not applicable)."
+lead_author_surname: Rompré
 
 
-author_contributions: |
-  Please provide details of author contributions here.
-
-## Remove this if not required
-conflict_of_interest: |
-  Please declare any conflict of interest here.
 
 abstract: |
-  Please provide an abstract of no more than 250 words in a single paragraph. Abstracts should explain to the general reader the major contributions of the article. References in the abstract must be cited in full within the abstract itself and cited in the text.
+  Dans cette étude, le ministère de l'Environnement du Québec a analysé la santé écologique des rivières en mesurant la distribution et l'abondance des macroinvertébrés benthiques. Les prélèvements effectués ont permis d'examiner l'impact de variables comme la largeur de la rivière, la profondeur, la vitesse du courant, la transparence et la température de l'eau sur ces communautés. Les résultats révèlent qu'aucune corrélation significative n'est observée entre la largeur, la profondeur et la vitesse du courant avec l'abondance benthique. Toutefois, la température de l'eau montre une légère influence positive. Des corrélations importantes existent entre la profondeur et la largeur des rivières, et entre ces paramètres et la température, indiquant que des rivières plus larges et plus profondes ont tendance à être plus chaudes. La transparence de l'eau affecte également l'abondance du benthos, avec des niveaux plus élevés dans les eaux moyennement transparentes. Cette recherche éclaire les dynamiques fluviales et fournit des données essentielles pour la gestion des ressources aquatiques au Québec, nécessitant des analyses plus approfondies pour comprendre les interactions complexes des écosystèmes aquatiques.
 
 
-significance: |
-  Authors must submit a 120-word maximum statement about the significance of their research paper written at a level understandable to an undergraduate educated scientist outside their field of speciality. The primary goal of the Significance Statement is to explain the relevance of the work in broad context to a broad readership. The Significance Statement appears in the paper itself and is required for all research papers.
+
 
 acknowledgements: |
   Please include your acknowledgments here, set in a single paragraph. Please do not include any acknowledgments in the Supporting Information, or anywhere else in the manuscript.
 
-keywords:
-  - one
-  - two
-  - optional
-  - optional
-  - optional
 
 ## must be one of: pnasresearcharticle (usual two-column layout), pnasmathematics (one column layout), or pnasinvited (invited submissions only)
 pnas_type: pnasresearcharticle
@@ -61,222 +43,39 @@ lineno: false
 
 output: rticles::pnas_article
 ---
-
 Introduction {#Introduction .unnumbered}
 ------
-Dans le cadre des efforts continus pour comprendre et préserver la qualité des écosystèmes aquatiques au Québec, le ministère de l'Environnement, de la Lutte contre les Changements Climatiques, de la Faune et des Parcs (MELCCFP) a entrepris une série d'inventaires du benthos. Ces inventaires fournissent des données précieuses sur la distribution et l'abondance des macroinvertébrés benthiques, des indicateurs clés de la santé écologique des rivières. Utilisant un filet à mailles fines (D-net), les équipes du MELCCFP réalisent des prélèvements standardisés sur un effort d'échantillonnage de 3m², effectuant trois passages par site pour maximiser la représentativité des données.
+Dans le cadre des efforts continus pour comprendre et préserver la qualité des écosystèmes aquatiques au Québec, le ministère de l'Environnement, de la Lutte contre les Changements Climatiques, de la Faune et des Parcs (MELCCFP) a entrepris une série d'inventaires du benthos. Ces inventaires fournissent des données précieuses sur la distribution et l'abondance des macroinvertébrés benthiques, des indicateurs clés de la santé écologique des rivières. Utilisant un filet à mailles fines (D-net), les équipes du MELCCFP réalisent des prélèvements standardisés sur un effort d'échantillonnage de 3m², effectuant trois passages par site pour maximiser la représentativité des données. Les échantillons récoltés sont ensuite analysés en laboratoire. Sur des plateaux de tri, les espèces sont identifiées et dénombrées, bien que seulement une fraction de chaque échantillon soit identifiée pour estimer l'abondance globale. Ces informations sont ensuite reliées à divers paramètres physico-chimiques des sites d'échantillonnage, tels que la largeur et la profondeur de la rivière, la vitesse du courant, la transparence et la température de l'eau. Cette étude scientifique vise à analyser comment ces variables influencent la distribution et la densité des communautés benthiques. Les résultats de cette recherche fourniront non seulement une meilleure compréhension des écosystèmes fluviaux du Québec mais aussi des données essentielles pour la gestion durable et la conservation des ressources aquatiques.
 
-Les échantillons récoltés sont ensuite analysés en laboratoire. Sur des plateaux de tri, les espèces sont identifiées et dénombrées, bien que seulement une fraction de chaque échantillon soit étudiée pour estimer l'abondance globale. Cette méthodologie permet de recueillir des informations précises sur les populations de macroinvertébrés, qui sont ensuite reliées à divers paramètres physico-chimiques des sites d'échantillonnage, tels que la largeur et la profondeur de la rivière, la vitesse du courant, la transparence et la température de l'eau.
-
-Cette étude scientifique vise à analyser comment ces variables influencent la distribution et la densité des communautés benthiques. Par exemple, la transparence de l'eau, qui peut refléter la concentration de matières en suspension, est un facteur potentiellement crucial, tout comme la température, qui influence directement le métabolisme des organismes aquatiques. Les résultats de cette recherche fourniront non seulement une meilleure compréhension des écosystèmes fluviaux du Québec mais aussi des données essentielles pour la gestion durable et la conservation des ressources aquatiques de la province.
-
-
-![Légende figure. \label{fig:plot1}]("C:/Users/ALEXIS/OneDrive/Bureau/Atelier2_ AlexisGabJust/projet-gab-alex-just/figure_1.png"){width=100% height=100%}
-
-
-Guide to using this template {.unnumbered}
-========================================
-
-Please note that whilst this template provides a preview of the typeset
-manuscript for submission, to help in this preparation, it will not
-necessarily be the final publication layout. For more detailed
-information please see the [PNAS Information for
-Authors](http://www.pnas.org/site/authors/format.xhtml).
-
-
-Author Affiliations {#author-affiliations .unnumbered}
--------------------
-
-Include department, institution, and complete address, with the
-ZIP/postal code, for each author. Use lower case letters to match
-authors with institutions, as shown in the example. Authors with an
-ORCID ID may supply this information at submission.
-
-Submitting Manuscripts {#submitting-manuscripts .unnumbered}
-----------------------
-
-All authors must submit their articles at
-[PNAScentral](http://www.pnascentral.org/cgi-bin/main.plex). If you are
-using Overleaf to write your article, you can use the "Submit to PNAS"
-option in the top bar of the editor window.
-
-Format {#format .unnumbered}
+Méthode {#Méthode .unnumbered}
 ------
+Dans le cadre de notre étude sur l'abondance des macroinvertébrés benthiques des rivières québécoises, nous avons exploité une base de données existante fournie par le MELCCFP. Après avoir procédé à un nettoyage et à une validation rigoureuse des données, nous avons utilisé une combinaison d'outils et de techniques pour analyser et présenter nos résultats. Le processus a commencé par le nettoyage des données écologiques pour éliminer les erreurs et les incohérences, suivi de leur validation pour assurer l'exactitude et la fiabilité des informations. Les données nettoyées ont été entreposées dans une base de données SQL, gérée avec RSQLite pour faciliter la manipulation des données dans l'environnement RStudio. Pour garantir la reproductibilité de notre recherche, nous avons utilisé Git pour le versionnage du code. L'automatisation des scripts d'analyse a été réalisée avec le package « targets » dans R, permettant une mise à jour efficace et une exécution systématique des analyses. La visualisation des données a joué un rôle crucial, utilisant des techniques de conception graphique avancées pour illustrer clairement les résultats. Enfin, la communication des découvertes scientifiques a été formalisée à travers des rapports détaillés en RMarkdown, combinant code, résultats et interprétations pour une diffusion transparente et accessible des résultats de la recherche.
 
-Many authors find it useful to organize their manuscripts with the
-following order of sections; Title, Author Affiliation, Keywords,
-Abstract, Significance Statement, Results, Discussion, Materials and
-methods, Acknowledgments, and References. Other orders and headings are
-permitted.
+Résultats {#Résultats .unnumbered}
+------
+La largeur, la profondeur et la vitesse du courant de la rivière liée à l'abondance totale du benthos, ont montré, respectivement un coefficient de corrélation non significatif de -0,026, 0.048 et 0.011, nous empêchant donc d’émettre des conclusions entre ces paramètres et l’abondance du benthos. Toutefois, la température de l'eau des rivières montre une corrélation significative légèrement positive (0.073), suggérant une influence minime de ce paramètre sur l'abondance totale du benthos. Il est intéressant de constater que des corrélations positives significatives sont observées entre la profondeur et la largeur des rivières (0.219), la largeur des rivières et la température de l'eau (0.290), indiquant que les rivières plus larges et plus profondes peuvent avoir des températures plus élevées. Mais aussi entre la température de l’eau et la vitesse du courant des rivières (0,332) et entre la profondeur et la vitesse du courant des rivières (0,442).
 
-Manuscript Length {#manuscript-length .unnumbered}
------------------
+La figure 2 suggère qu'il y a des variations dans l'abondance des organismes benthiques entre les différentes classes de transparence. Sur une échelle logarithmique, l'abondance tend à être plus élevée dans les cours d'eau à transparence élevée et moyenne qu'à transparence faible, mais avec une étendue des données notables pour la classe « élevée ». Nous avons donc fait un test de Tukey, qui a révélé uniquement une différence significative dans l’abondance totale entre les groupes de transparence moyenne et faible.
 
-PNAS generally uses a two-column format averaging 67 characters,
-including spaces, per line. The maximum length of a Direct Submission
-research article is six pages and a PNAS PLUS research article is ten
-pages including all text, spaces, and the number of characters displaced
-by figures, tables, and equations. When submitting tables, figures,
-and/or equations in addition to text, keep the text for your manuscript
-under 39,000 characters (including spaces) for Direct Submissions and
-72,000 characters (including spaces) for PNAS PLUS.
+La figure 3 illustré ci-dessus présente une régression linéaire (ligne bleue) entre la vitesse moyenne du courant (m/s) et la température moyenne de l'eau (°C). Celle-ci montre une relation significative entre les deux attributs (p-value = 3,064 x 10-11***) ainsi qu’un R2 de 0,5216. Une telle relation est couramment exploitée en écologie et hydrologie pour évaluer les répercussions de la température sur les systèmes aquatiques @sinokrot_-stream_2000. L'intervalle de confiance (bande grise) entourant la ligne de régression indique la fiabilité des prédictions obtenues pour divers degrés de température.
 
-References {#references .unnumbered}
-----------
+![Corrélation entre paramètres physiques des rivières et abondance des macro-invertébrés benthiques, avec diagrammes de dispersion et densité. \label{fig:plot1}]("C:/Users/ALEXIS/OneDrive/Bureau/Atelier2_ AlexisGabJust/projet-gab-alex-just/figure_3.png"){width=50% height=26%}
 
-References should be cited in numerical order as they appear in text;
-this will be done automatically via bibtex, e.g. @belkin2002using and
-@berard1994embedding [@coifman2005geometric]. All references, including
-for the SI, should be included in the main manuscript file. References
-appearing in both sections should not be duplicated. SI references
-included in tables should be included with the main reference section.
+![Relation entre la vitesse moyenne du courant et la température moyenne du cours d'eau avec la position des taxons associés. \label{fig:plot1}]("C:/Users/ALEXIS/OneDrive/Bureau/Atelier2_ AlexisGabJust/projet-gab-alex-just/figure_1.png"){width=50% height=26%}
 
-Data Archival {#data-archival .unnumbered}
--------------
+![Relation entre la transparence de l'eau (élevée, moyenne et faible) et l'abondance totale des organismes benthiques . \label{fig:plot1}]("C:/Users/ALEXIS/OneDrive/Bureau/Atelier2_ AlexisGabJust/projet-gab-alex-just/figure_2.png"){width=50% height=26%}
 
-PNAS must be able to archive the data essential to a published article.
-Where such archiving is not possible, deposition of data in public
-databases, such as GenBank, ArrayExpress, Protein Data Bank, Unidata,
-and others outlined in the Information for Authors, is acceptable.
+Discussion {#Discussion .unnumbered}
+------
+La matrice de corrélation présentée à la figure 1 fournit une vue d'ensemble des relations potentielles entre les paramètres physiques des rivières soit la profondeur (m), la largeur (m), la vitesse du courant (m/s) et la température de l’eau (°C). Nous souhaitions observer des corrélations entre ces différentes caractéristiques et l'abondance totale des organismes benthiques. Les corrélations significatives dans la figure 1 sont en accord avec les résultats retrouvés dans la littérature scientifique. En effet, des études antérieures montrent souvent une corrélation positive entre l’abondance du benthos et la température de l’eau qui peut affecter leur métabolisme, leur taux de croissance ainsi que leur reproduction [@lenat_effects_1994;@paul_streams_2001]. Ces résultats nous montrent que, bien que certaines relations entre les caractéristiques physiques des rivières et l'abondance benthique ne soient pas significatives, d'autres, telles que la température de l'eau, peuvent avoir un impact, bien que faible, sur l’abondance du benthos dans les rivières. Il est important de comprendre que ces corrélations n'impliquent pas nécessairement une relation de cause à effet et que des analyses plus approfondies seraient nécessaires pour démystifier les interactions complexes au sein de ces écosystèmes aquatiques. 
 
+L'interprétation écologique de la figure 2 lie la transparence de l'eau, indice de sa qualité, à l'abondance du benthos. Une eau claire, indiquant peu de particules en suspension, laisse pénétrer davantage de lumière, stimulant la photosynthèse et la productivité primaire, bénéficiant ainsi à la chaîne alimentaire disponible pour les organismes benthiques. À l'inverse, une eau trouble, avec une faible transparence due à une turbidité élevée, limite l'exposition à la lumière et peut réduire la disponibilité alimentaire pour le benthos. La présence de variations significatives dans les données suggère l'influence d'autres facteurs environnementaux, indiquant des interactions écologiques complexes influençant les organismes benthiques. Les écarts importants et valeurs aberrantes dans les données nécessitent une exploration plus approfondie, et des analyses statistiques supplémentaires pourraient clarifier les mécanismes sous-jacents. Les avis scientifiques divergent ; l'étude de Lunt et Smee révèle que la turbidité peut favoriser une plus grande abondance benthique en offrant un refuge contre les prédateurs @lunt_turbidity_2020. Tandis que Norton note que la prédation est plus élevée dans les eaux claires, réduisant ainsi l'abondance benthique @norton_crystal_2023. Cependant, l’étude de Bigham a eu du mal à démontrer des liens significatifs entre la turbidité et les communautés benthiques en raison de réponses variables entre différentes familles, soulignant le besoin de recherches futures pour des conclusions définitives @bigham_review_2021.
 
+L’objectif de la figure 3 était de déterminer l'influence de la température sur la vélocité des cours d'eau, tout en explorant les potentiels variations de cette influence sur différents taxons benthiques. Ainsi, la tendance positive qui émerge de l'analyse, suggérant une augmentation de la vitesse du courant en relation avec l'élévation de la température, est une conséquence probable de la réduction de la densité de l'eau chaude, ce qui diminue la friction et favorise un écoulement plus aisé de l’eau. L'hétérogénéité des points de données révèle que les taxons de macro-invertébrés montrent des vitesses de courant variables à des températures identiques, reflétant des préférences écologiques ou des tolérances spécifiques aux gradients de température et de courant. Par exemple, des organismes tels que certains Trichoptères, qui nécessitent des eaux calmes et des substrats stables pour s'accrocher ou ériger des habitats @mackay_ecological_1979, contrastent avec des taxons comme les Pteronarcyidae, qui prospèrent dans des courants plus vifs, favorables à leur oxygénation et à l'apport en nutriments @stewart_front_1988. En outre, la température est un facteur déterminant du métabolisme benthique, influençant la croissance, la reproduction et la survie. Les températures accrues peuvent stimuler ces processus jusqu'à une limite, au-delà de laquelle les conditions deviennent hostiles [@portner_physiology_2008;@portner_ecosystem_2008]. Ainsi, la distribution des données peut être interprétée comme une cartographie des niches écologiques favorables à chaque taxons, délimitées par des seuils de températures critiques.
 
-Language-Editing Services {#language-editing-services .unnumbered}
--------------------------
-
-Prior to submission, authors who believe their manuscripts would benefit
-from professional editing are encouraged to use a language-editing
-service (see list at www.pnas.org/site/authors/language-editing.xhtml).
-PNAS does not take responsibility for or endorse these services, and
-their use has no bearing on acceptance of a manuscript for publication.
-
-![Placeholder image of a frog with a long example caption to show
-justification setting.<span data-label="fig:frog"></span>](frog.png)
-
-Digital Figures {#sec:figures .unnumbered}
----------------
-
-Only TIFF, EPS, and high-resolution PDF for Mac or PC are allowed for
-figures that will appear in the main text, and images must be final
-size. Authors may submit U3D or PRC files for 3D images; these must be
-accompanied by 2D representations in TIFF, EPS, or high-resolution PDF
-format. Color images must be in RGB (red, green, blue) mode. Include the
-font files for any text.
-
-Figures and Tables should be labelled and referenced in the standard way
-using the `\label{}` and `\ref{}` commands.
-
-Figure \[fig:frog\] shows an example of how to insert a column-wide
-figure. To insert a figure wider than one column, please use the
-`\begin{figure*}...\end{figure*}` environment. Figures wider than one
-column should be sized to 11.4 cm or 17.8 cm wide.
-
-Single column equations {#single-column-equations .unnumbered}
------------------------
-
-Authors may use 1- or 2-column equations in their article, according to
-their preference.
-
-To allow an equation to span both columns, options are to use the
-`\begin{figure*}...\end{figure*}` environment mentioned above for
-figures, or to use the `\begin{widetext}...\end{widetext}` environment
-as shown in equation \[eqn:example\] below.
-
-Please note that this option may run into problems with floats and
-footnotes, as mentioned in the [cuted package
-documentation](http://texdoc.net/pkg/cuted). In the case of problems
-with footnotes, it may be possible to correct the situation using
-commands `\footnotemark` and `\footnotetext`.
-
-$$\begin{aligned}
-(x+y)^3&=(x+y)(x+y)^2\\
-       &=(x+y)(x^2+2xy+y^2) \label{eqn:example} \\
-       &=x^3+3x^2y+3xy^3+x^3. 
-\end{aligned}$$
-
-
-
-<!-- pandoc writes all tables using longtable, which fails in 2-column mode
-
-  Species                    CBS     CV     G3
-  ----------------------- ------ ------ ------
-  1\. Acetaldehyde           0.0    0.0    0.0
-  2\. Vinyl alcohol          9.1    9.6   13.5
-  3\. Hydroxyethylidene     50.8   51.2   54.0
-
-  : Comparison of the fitted potential energy surfaces and ab initio
-  benchmark electronic energy calculations
-
--->
-
-Supporting Information (SI) {#supporting-information-si .unnumbered}
----------------------------
-
-
-The main text of the paper must stand on its own without the SI. Refer
-to SI in the manuscript at an appropriate point in the text. Number
-supporting figures and tables starting with S1, S2, etc. Authors are
-limited to no more than 10 SI files, not including movie files. Authors
-who place detailed materials and methods in SI must provide sufficient
-detail in the main text methods to enable a reader to follow the logic
-of the procedures and results and also must reference the online
-methods. If a paper is fundamentally a study of a new method or
-technique, then the methods must be described completely in the main
-text. Because PNAS edits SI and composes it into a single PDF, authors
-must provide the following file formats only.
-
-### SI Text {#si-text .unnumbered}
-
-Supply Word, RTF, or LaTeX files (LaTeX files must be accompanied by a
-PDF with the same file name for visual reference).
-
-### SI Figures {#si-figures .unnumbered}
-
-Provide a brief legend for each supporting figure after the supporting
-text. Provide figure images in TIFF, EPS, high-resolution PDF, JPEG, or
-GIF format; figures may not be embedded in manuscript text. When saving
-TIFF files, use only LZW compression; do not use JPEG compression. Do
-not save figure numbers, legends, or author names as part of the image.
-Composite figures must be pre-assembled.
-
-### 3D Figures {#d-figures .unnumbered}
-
-Supply a composable U3D or PRC file so that it may be edited and
-composed. Authors may submit a PDF file but please note it will be
-published in raw format and will not be edited or composed.
-
-### SI Tables {#si-tables .unnumbered}
-
-Supply Word, RTF, or LaTeX files (LaTeX files must be accompanied by a
-PDF with the same file name for visual reference); include only one
-table per file. Do not use tabs or spaces to separate columns in Word
-tables.
-
-### SI Datasets {#si-datasets .unnumbered}
-
-Supply Excel (.xls), RTF, or PDF files. This file type will be published
-in raw format and will not be edited or composed.
-
-### SI Movies {#si-movies .unnumbered}
-
-Supply Audio Video Interleave (avi), Quicktime (mov), Windows Media
-(wmv), animated GIF (gif), or MPEG files and submit a brief legend for
-each movie in a Word or RTF file. All movies should be submitted at the
-desired reproduction size and length. Movies should be no more than 10
-MB in size.
-
-### Still images {#still-images .unnumbered}
-
-Authors must provide a still image from each video file. Supply TIFF,
-EPS, high-resolution PDF, JPEG, or GIF files.
-
-### Appendices {#appendices .unnumbered}
-
-PNAS prefers that authors submit individual source files to ensure
-readability. If this is not possible, supply a single PDF file that
-contains all of the SI associated with the paper. This file type will be
-published in raw format and will not be edited or composed.
-
+Conclusion {#Conclusion .unnumbered}
+------
+En conclusion, le graphique met en lumière la complexité des interactions entre les paramètres abiotiques et la biodiversité benthique, soulignant l'importance de la température et de la dynamique hydraulique dans la structuration des communautés aquatiques. Ces observations forment la base d'une compréhension plus approfondie des écosystèmes fluviaux, offrant des perspectives essentielles pour la conservation et la gestion des ressources aquatiques.
 
 <!-- Leave these lines as they are at the end of your .Rmd file to ensure placement of methods & acknowledgements sections before the references-->
 \showmatmethods
